/*corat
 *28.09.2020
 *16:54
 *KaffeeMaschine
 */

package KaffeeMaschine;

/**
 * @author corat
 */
public interface IWartbar {
    /**
     * stellt für alle wartbaren Behälter die Methode wartung() bereit
     * Darin wird die Wartung in den Klassen spezifiziert
     */
    public void wartung();
}
