/*corat
 *03.10.2020
 *14:28
 *KaffeeMaschine
 */

package kaffeemaschine;

/**
 * Alle Constant Werte des Packets
 * @author corat
 */
public class Constants {

    public static final int ABFALLBEHAELTER = 5;
    public static final int ZEHN = 10;
    public static final int WARTUNG = 9;
    public static final int PROGRAMM_ABBRUCH = 0;
    public static final int DREI = 3;
    public static final int SIZE_VIER = 4;
    public static final String BILD_PFAD = ".\\src\\gui\\Bilder\\Neu\\";

    public final static String ZEILE_1 = "****** Kaffeemaschine ******";
    public final static String ZEILE_2 = "============================";
    public final static String ZEILE_3 = "Auswahl:____________________";
    public final static String ZEILE_4 = "1.) Kaffee schwarz__________";
    public final static String ZEILE_5 = "2.) Kaffee mit Zucker_______";
    public final static String ZEILE_6 = "3.) Kaffee mit Milch________";
    public final static String ZEILE_7 = "4.) Kaffee mit Milch/Zucker_";
    public final static String ZEILE_8 = "5.) Kakao___________________";
    public final static String ZEILE_9 = "9.) _________________Wartung";
    public final static String ZEILE_10 = "0.) _________________Abbruch";
}
