@startuml

title __KAFFEEMASCHINE's Class Diagram__\n

  namespace UI {
    class UI.Menu {
    }
  }
  

  namespace gui {
    class gui.KMGui {
    }
  }
  

  namespace gui {
    class gui.MenuSchreiber {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelter {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelterVollException {
    }
  }
  

  namespace kaffeemaschine {
    abstract class kaffeemaschine.AbstractBehaelter {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Constants {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.GuiStart {
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IMenu {
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IWartbar {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Kaffeemaschine {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Rezept {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.StarteKaffeeMaschine {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatLeerException {
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatenBehaelter {
    }
  }
  

  namespace test.kaffeemaschine {
    class test.kaffeemaschine.MenuTest {
    }
  }
  

  UI.Menu .up.|> kaffeemaschine.IMenu
  gui.KMGui .up.|> kaffeemaschine.IMenu
  kaffeemaschine.AbfallBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.AbfallBehaelter -up-|> kaffeemaschine.AbstractBehaelter
  kaffeemaschine.AbstractBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter -up-|> kaffeemaschine.AbstractBehaelter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
